@@ -3,6 +3,7 @@ November 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>
  * macosx/plugins/HIDInput/src/PlugPAD.c: Implemented PADstartPoll() and
    PADpoll().
  * plugins/dfxvideo/key.c: Handle Fullscreen toggle message for Mac OS X.
+ * macosx/plugins/DFXVideo/macsrc/PluginGLView.m: Fixed one byte-order issue.
 
 November 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
